Revision history for 'TAP-Formatter-HTML' Perl module
-----------------------------------------------------

All changes by Steve Purkis, unless otherwise noted.

0.10
    +	fixed RT #82738: color method was not implemented.

0.09
    +	upgraded to jQuery 1.4.2
    +	updated App::Prove::Plugin::HTML to simplify cmdline usage to the
	extent possible.
    +	fixed RT #41457 & RT #49621: applied Neil Hemingway, Tim Esselens, and
    	Panu Ervamaa's patches, and got everything working.  This addresses:
	    +	small changes to the top-left corner menu (default_report.css)
		to render it corretly with Firefox 3 (Linux)
	    +	inline_js fix
	    +	added support for force_inline_js (not on by default, including
		jQuery inline causes errors)
	    +	fixed bug in handling of parse_errors in default_report.tt
	    +	fixed bug: nothing happens when I click on the test output.
	    +	XHTML support
    +	fixed bug: click on summary changes location
    +	fixed 2 minor javascript bugs where '#' was being used as a jQuery id ref
    +	added new feature: column sorting via Christian Bach's jquery.tablesorter
	plugin (bundled from http://tablesorter.com). optional.
    +	added new feature: up to top of test when the test filename is no longer
	visible.


0.08
    +	applied Steffen Schwigon's patch to display YAML TAP as
	pre-formatted text.
    +	fixed RT #43871: missing dep on File::Temp 0.17
	[reported by Paddy Newman]
    +	fixed RT #37983: CSS and JS Paths on Win32 get mangled
	and documented solution. [reported by Chris Davaz]
    +	wrote some selenium tests, finally.  found & fixed small bug where
	a test's html_id wasn't being set.
    +	fixed RT #48296: pod for js_uris mentions styles, not scripts
	[reported by Slaven Rezić]
    +	started on RT #41457: only got "incline_js" fixed
	[reported by Neil Hemingway]

0.07
    +	you can now specify an output file for the HTML to be written to!
    +	you can now set some config params using environment vars. this should