@@ -6,8 +6,8 @@ use lib 't/lib';
 
 use Test::More 'no_plan';
 
+use TAP::Harness;
 use TAP::Formatter::HTML;
-
 
 eval {
     for (1..64) { push @INC, "lib" }
@@ -20,4 +20,4 @@ eval {
 };
 my $e = $@;
 unlike($e, qr/INCLUDE_PATH exceeds .+ directories/i, 'RT 74364 - INCLUDE_PATH exceeds num dirs');
-ok(!$e, 'no error set when calling default_template_processor with lots of dirs in @INC');
+ok(!$e, 'no error set when calling default_template_processor with lots of dirs in @INC') || diag($e);
